force-app/main/default/objects/Patient_Report__c/Patient_Report__c.object-meta.xml
<CustomObject>
    <label>Patient Report</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Patient Report No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>