force-app/main/default/objects/Patient_Report__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Reports</relationshipLabel>
    <relationshipName>Patient_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>